[Feature Add]: fixing text wrapping + small things

--- a/src/app/landing.module.scss
+++ b/src/app/landing.module.scss
@@ -20,6 +20,7 @@ $end-color: #000000;
   display: flex;
   flex-direction: column;
   border: 2px solid #595858;
+  overflow-y: scroll;
 
   p, span {
     opacity: 1;
@@ -38,6 +39,8 @@ $end-color: #000000;
 
 .terminalTextWrapper {
   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .cursor {
@@ -95,4 +98,6 @@ $end-color: #000000;
   font-weight: 200;
   font-style: italic;
   color: #FAA066;
+  white-space: pre;
+  margin-right: 7px;
 }
